2006-07-12  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-ssif-interface.c (ipmi_ssif_cmd2): handles
	smaller and oversized packets.

2006-07-12  A Balamurugan  <bala@zresearch.com>

	* common/src/argp-common.c: initialize errno before calling
	strtol().

	* fish/src/scm-procedures.c (ex_string2number): like wise.

2006-07-12  A Balamurugan  <bala@zresearch.com>

	* fish/src/scm-procedures.c (ex_string2number): new function.

	* fish/src/extension.c: added fi-string->number primitive
	procedure.

	* fish/extensions/bc-common.scm, fish/extensions/bmc-info.scm,
	fish/extensions/pef.scm, fish/extensions/sensors-common.scm: uses
	fi-string->number

	* fish/extensions/sel.scm: uses fi-string->number and fixes of
	error messages.

2006-07-12  A Balamurugan  <bala@zresearch.com>

	* common/src/argp-common.c: --driver-address,
	--packet-retry-timeout and --packet-retry-max options accept arg
	value in decimal, octal and hex.  fixed bug #16291.

	* common/src/Makefile.am: updated.

2006-07-11  A Balamurugan  <bala@zresearch.com>

	* configure.ac, libfreeipmi/src/ipmi-semaphores.h: reverted back
	ipckey changes.

2006-07-11  A Balamurugan  <bala@zresearch.com>

	* configure.ac: changed version to 0.2.3qa0

2006-07-10  A Balamurugan  <bala@zresearch.com>

	* configure.ac, libfreeipmi/Makefile.am: reverted back ipckey
	changes.

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_sendto,
	ipmi_lan_recvfrom): reverted back 2006-07-06 and 2006-04-14
	changes.

2006-07-06  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_sendto): bug fix
	of uninitialized packet_size.

2006-06-26  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd_receive): Fix
	compile bug.

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_recvfrom): Fix
	compile warning.

	* libfreeipmi/src/ipmi-ssif-interface.c (ipmi_ssif_cmd2): Fix
	compile warning.
	
2006-06-26  A Balamurugan  <bala@zresearch.com>
