@@ -1,3 +1,9 @@
+2006-07-12  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/src/ipmi-lan-interface.h,
+	libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_sendto,
+	ipmi_lan_recvfrom): Fully revert changes to 0.2.1 release.
+	
 2006-07-12  A Balamurugan  <bala@zresearch.com>
 
 	* libfreeipmi/src/ipmi-ssif-interface.c (ipmi_ssif_cmd2): handles
